--- a/cantaloupe.properties.tmpl
+++ b/cantaloupe.properties.tmpl
@@ -292,7 +292,7 @@ processor.background_color = white
 # Available values are `bell`, `bspline`, `bicubic`, `box`, `hermite`,
 # `lanczos3`, `mitchell`, `triangle`. (JaiProcessor & KakaduNativeProcessor
 # ignore these.)
-processor.downscale_filter = bicubic
+processor.downscale_filter = lanczos3
 processor.upscale_filter = bicubic
 
 # Intensity of an unsharp mask from 0 to 1.
